# tsugi-kpool

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  benchmark_protocol.md
examples/: minimal_finetune.py
scripts/: check_disclosure.sh
src/tsugi_kpool/: __init__.py  aggregator.py  backend.py  config.py  diagnostics.py  router.py  runtime.py  sideband.py
tests/: conftest.py  test_aggregator.py  test_config.py  test_fsdp_cpu_integration.py  test_hf_transformer_integration.py  test_mechanism_proxies.py  test_mps_integration.py  test_peft_integration.py  test_pre_forward.py  test_router.py  test_runtime.py  test_sideband.py
