[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tsugi-kpool"
version = "0.1.2"
description = "K-Pool LoRA SDK. software analog of TsugiCinema's Infinity provisional at LoRA adapter granularity. Productized from the K-Pool LoRA provisional (US App. 64/060,315) and the Infinity provisional (US App. 64/055,093)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tong Liu", email = "tong@tsugicinema.com" }]
keywords = ["pytorch", "lora", "peft", "distributed-training", "plesiochronous"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.4",
    "peft>=0.12",
    "transformers>=4.45",
    "accelerate>=0.34",
    "numpy>=1.26",
]

[project.optional-dependencies]
benchmark = [
    "datasets>=2.20",
    "evaluate>=0.4",
    "wandb>=0.17",
    "bitsandbytes>=0.43",
    "pyyaml>=6.0",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    "matplotlib>=3.8",
    "scipy>=1.13",
    "hf-transfer>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
"Homepage" = "https://tsugilabs.ai"
"Patents" = "https://tsugilabs.ai/patents"
"Repository" = "https://github.com/tsugiai/tsugi-kpool"
"Unified-SDK" = "https://github.com/tsugiai/tsugi"
"Companion-SDK-Patent-Independent" = "https://github.com/tsugiai/tsugi-mend"

[tool.hatch.build.targets.wheel]
packages = ["src/tsugi_kpool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Test modules gate heavy optional deps (torch / peft / transformers) behind
# pytest.importorskip(), which must run before the guarded imports. That
# legitimately puts module-level imports below the first statement (E402).
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
